Solución de bugs y sacar del pozo